<resources>
    <string name="app_name">Dev Tiles</string>
    <string name="error">Error</string>

    <string name="show_layout_bounds">Show layout bounds</string>
    <string name="adb_over_network">ADB over network</string>
    <string name="show_touches">Show taps</string>
    <string name="pointer_location">Pointer location</string>
    <string name="dont_keep_activities">Don’t keep activities</string>
    <string name="title_activity_adb_settings">WiFi ADB Settings</string>

    <string translatable="false" name="permission_channel_id">permission_id</string>
    <string translatable="false" name="permission_channel_name">Permission</string>

    <!-- ADB settings -->
    <string translatable="false" name="pref_key_auto_enable_adb">pref_key_auto_enable_adb</string>
    <string translatable="false" name="pref_key_auto_disable_adb">pref_key_auto_disable_adb</string>
    <string translatable="false" name="pref_key_for_aps">pref_key_for_aps</string>

    <string name="pref_title_auto_enable_adb">Auto-enable TCP ADB</string>
    <string name="pref_title_auto_disable_adb">Auto-disable TCP ADB</string>
    <string name="pref_title_for_aps">For WiFi access points</string>
    <string name="pref_summary_for_aps">Access point\'s name per line</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="need_coarse_location">This feature works only with permission!</string>
    <string name="grant_via_system_settings">Please, give required permission in system settings</string>
    <string name="open_needed">For auto-switch add a tile and open the notification curtain </string>
    <string name="menu_share_logs">Share logs</string>
    <string name="title_share_file_with">Share file with</string>
</resources>
